# Template.Python.Application

./: License.md  README.md  pyproject.toml
.github/: dependabot.yml
