[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
version = "0.0.1"

authors = [
  { name="Example Author", email="author@example.com" },
]

description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KentVejrupMadsen/Template.Python.Library"
"Issues" = "https://github.com/KentVejrupMadsen/Template.Python.Library/issues"
